--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
+
+        <canvas id="board"></canvas>
         <div class="container" id="optionsPage">
             <div class="row section1">
                 <div class="col-md-12">
@@ -27,7 +29,7 @@
                     <p>Załaduj bitmape z dysku lub wybierz przykładową.</p>
                 </div>
             </div>
-            <form id="optionsForm" action="">
+            <div id="optionsForm">
                 <div class="row section3">
                     <div class="col-md-6 well" id="default">
                         <input type="radio" name="map" checked>
@@ -45,10 +47,10 @@
                 </div>
                 <div class="row section4">
                     <div class="col-md-12">
-                        <input type="submit" id="submit" value="Przejdź do labiryntu">
+                        <button id="submit">Przejdź do labiryntu</button>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
         <script data-main="js/main.js" src="js/require.js"></script>
 
