--- a/index.html
+++ b/index.html
@@ -12,42 +12,47 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="https://ajax.googleapis.com/ajax/libs/threejs/r84/three.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://unpkg.com/vue"></script>
     </head>
     <body>
-
-        <canvas id="board"></canvas>
-        <div class="container" id="optionsPage">
-            <div class="row section1">
-                <div class="col-md-12">
-                    <h1>3dLabirint Walker</h1>
-                    <p>Strona umożliwia poruszanie się po zdefiniowanym przez bitmape labiryncie.</p>
-                </div>
-            </div>
-            <div class="row section2">
-                <div class="col-md-12">
-                    <p>Załaduj bitmape z dysku lub wybierz przykładową.</p>
-                </div>
-            </div>
-            <div id="optionsForm">
-                <div class="row section3">
-                    <div class="col-md-6 well" id="default">
-                        <input type="radio" name="map" checked>
-                        <canvas></canvas>
-                        <p>Szerokość: <span class="canvas-width"></span></p>
-                        <p>Wysokość: <span class="canvas-height"></span></p>
-                    </div>
-                    <div class="col-md-6 well" id="custom">
-                        <input type="radio" name="map">
-                        <input type="file" name="bitmap" disabled>
-                        <canvas></canvas>
-                        <p>Szerokość: <span class="canvas-width"></span></p>
-                        <p>Wysokość: <span class="canvas-height"></span></p>
-                    </div>
-                </div>
-                <div class="row section4">
+        <div id="app">
+            <canvas id="board" v-show="gameStarted"></canvas>
+            <div class="container" v-show="!gameStarted" id="optionsPage">
+                <div class="row section1">
                     <div class="col-md-12">
-                        <button id="submit">Przejdź do labiryntu</button>
+                        <h1>3dLabirint Walker</h1>
+                        <p>Strona umożliwia poruszanie się po zdefiniowanym przez bitmape labiryncie.</p>
+                    </div>
+                </div>
+                <div class="row section2">
+                    <div class="col-md-12">
+                        <p>Załaduj bitmape z dysku lub wybierz przykładową.</p>
+                    </div>
+                </div>
+                <div id="optionsForm">
+                    <div class="row section3">
+                        <div class="col-md-6 well" id="default">
+                            <input type="radio" value="defaultMap" v-model="mapType">
+                            <canvas></canvas>
+                            <p>Szerokość: <span class="canvas-width"></span></p>
+                            <p>Wysokość: <span class="canvas-height"></span></p>
+                        </div>
+                        <div class="col-md-6 well" id="custom">
+                            <input type="radio" value="customMap" v-model="mapType">
+                            <input type="file" @change="onFileChange" :disabled="mapType !== 'customMap'">
+                            <canvas></canvas>
+                            <p>Szerokość: <span class="canvas-width"></span></p>
+                            <p>Wysokość: <span class="canvas-height"></span></p>
+                        </div>
+                    </div>
+                    <div class="row section4">
+                        <div class="col-md-12">
+                            <button v-on:click="submit()" :disabled="mapType === 'customMap' && !bitmapLoaded">
+                                Przejdź do labiryntu
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
